--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -24,6 +24,14 @@
         right: 0;
         overflow: scroll;
     }
+
+    .loader {
+        display: flex;
+        height: 100%;
+        flex: 1;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 
