--- a/src/app/movies/movies.component.scss
+++ b/src/app/movies/movies.component.scss
@@ -13,8 +13,10 @@
             width: 40%;
             padding: 3rem;
             margin: 1rem;
-            background: inherit;
+            background: linear-gradient(to bottom, rgba(255,255,255,0.3) 0%,rgba(193,193,193,0.15) 54%,rgba(193,193,193,0) 100%);
             position: relative;
+            border: 1px solid white;
+            border-radius: 3px;
 
             p {
                 color: white;
@@ -23,17 +25,14 @@
                     font-size: 1.3rem;
                 }
             }
+        }
 
-            &:after {
-                content: "";
-                background: inherit;
-                position: absolute;
-                left: 0;  //giving minus -25px left position
-                right: 0;
-                top: 0;   //giving minus -25px top position
-                bottom: 0;
-                box-shadow: inset 0 0 0 200px rgba(255,255,255,0.3);
-                filter: blur(2px);
+        .movieDetailBtn {
+            text-align: right;
+            cursor: pointer;
+
+            button {
+                cursor: pointer;
             }
         }
 
