affichage detail film

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<html>
+<link href="https://fonts.googleapis.com/css?family=Archivo" rel="stylesheet">
+
 <mat-sidenav-container class="sideNav">
     <mat-sidenav #sidenav mode="side" [(opened)]="opened" class="menu">
         <h1>
@@ -18,3 +21,5 @@
         </div>
     </mat-sidenav-content>
 </mat-sidenav-container>
+
+</html>
