--- a/src/app/movie-detail/movie-detail.component.scss
+++ b/src/app/movie-detail/movie-detail.component.scss
@@ -1,14 +1,58 @@
 .pageDetail {
     display: flex;
+    flex: 1;
     justify-content: center;
     align-items: center;
-    flex: 1;
     height: 100%;
     .movieDetail {
+        color: white;
+        width: 30%;
+
+        .title {
+            font-size: 1.2rem;
+            padding: 16px;
+        }
+
+        mat-list-item {
+            color: white;
+        }
+
+        mat-divider{
+            border-color: white;
+        }
+
+        mat-accordion {
+            .mat-expansion-indicator {
+                &:after {
+                    color: white;
+                }
+            }
+            color: white;
+            p {
+                color: white;
+            }
+            mat-expansion-panel {
+                background: transparent;
+                padding: 0 16px;
+            }
+            mat-panel-title {
+                color: white;
+            }
+
+            mat-expansion-panel-header {
+                padding: 0;
+            }
+
+            .mat-expansion-indicator::after, .mat-expansion-panel-header-description {
+                color: white;
+            }
+
+        }
+    }
+
+    .backgroundSW {
         background: linear-gradient(to bottom, rgba(255,255,255,0.3) 0%,rgba(193,193,193,0.15) 54%,rgba(193,193,193,0) 100%);
         border: 1px solid white;
         border-radius: 3px;
-        color: white;
-        width: 50%;
     }
 }
