Creation des composants characters

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -45,6 +45,7 @@ html {
 
     .mat-expansion-panel-content > .mat-expansion-panel-body {
         padding: 0 !important;
+        padding-bottom: 20px !important;
     }
 
     .mat-expansion-indicator::after, .mat-expansion-panel-header-description {
